<resources>
    <string name="app_name">TipCalculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>

    <!-- the '%s' is used for the TextView to automatically change it's text format based on each country currency -->
    <string name="tip_amount_text_view">Tip Amount: %s</string>
    <string name="tip_app_title">Tip</string>

</resources>